; ModuleID = '/home/carl/AnghaBench/linux/fs/ocfs2/dlm/extr_dlmmaster.c_dlm_get_mle_inuse.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ocfs2/dlm/extr_dlmmaster.c_dlm_get_mle_inuse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dlm_master_list_entry = type { i32, i32, %struct.dlm_ctxt* }
%struct.dlm_ctxt = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dlm_master_list_entry*)* @dlm_get_mle_inuse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dlm_get_mle_inuse(%struct.dlm_master_list_entry* %0) #0 {
  %2 = alloca %struct.dlm_master_list_entry*, align 8
  %3 = alloca %struct.dlm_ctxt*, align 8
  store %struct.dlm_master_list_entry* %0, %struct.dlm_master_list_entry** %2, align 8
  %4 = load %struct.dlm_master_list_entry*, %struct.dlm_master_list_entry** %2, align 8
  %5 = getelementptr inbounds %struct.dlm_master_list_entry, %struct.dlm_master_list_entry* %4, i32 0, i32 2
  %6 = load %struct.dlm_ctxt*, %struct.dlm_ctxt** %5, align 8
  store %struct.dlm_ctxt* %6, %struct.dlm_ctxt** %3, align 8
  %7 = load %struct.dlm_ctxt*, %struct.dlm_ctxt** %3, align 8
  %8 = getelementptr inbounds %struct.dlm_ctxt, %struct.dlm_ctxt* %7, i32 0, i32 1
  %9 = call i32 @assert_spin_locked(i32* %8)
  %10 = load %struct.dlm_ctxt*, %struct.dlm_ctxt** %3, align 8
  %11 = getelementptr inbounds %struct.dlm_ctxt, %struct.dlm_ctxt* %10, i32 0, i32 0
  %12 = call i32 @assert_spin_locked(i32* %11)
  %13 = load %struct.dlm_master_list_entry*, %struct.dlm_master_list_entry** %2, align 8
  %14 = getelementptr inbounds %struct.dlm_master_list_entry, %struct.dlm_master_list_entry* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %14, align 4
  %17 = load %struct.dlm_master_list_entry*, %struct.dlm_master_list_entry** %2, align 8
  %18 = getelementptr inbounds %struct.dlm_master_list_entry, %struct.dlm_master_list_entry* %17, i32 0, i32 0
  %19 = call i32 @kref_get(i32* %18)
  ret void
}

declare dso_local i32 @assert_spin_locked(i32*) #1

declare dso_local i32 @kref_get(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
